# template

./: .dockerignore  .pre-commit-config.yaml  CODEOWNERS  DESCRIPTION.md  LICENSE-commercial  README.md  mkdocs.yaml  package.json  pyproject.toml  ruff.toml
.github/: README.md
.github/workflows/: check-pr-format.yaml  check-stale.yaml  on-push.yaml
docs/: README.md  hooks.py  index.md
docs/assets/styles/: extra.css
